# defeed

./: .dockerignore  .env.example  .gitignore  .goreleaser.yaml  Dockerfile  Makefile  NOTICE  README.md  atlas.hcl  docker-compose.yml  go.mod  go.sum
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
clients/ts/: api.ts  base.ts  common.ts  configuration.ts  index.ts
cmd/cli/: main.go
cmd/reprocess/: main.go
cmd/server/: main.go
index/: .gitignore  README.md  pyproject.toml
index/src/: main.py  notebook.ipynb
index/src/defeed_index/: __init__.py  example.py  registry.py  repository.py  types.py
pkg/api/: api.gen.go  config.go  generate.go  openapi.yaml  server.go
pkg/config/: config.go
pkg/feeds/: config.go  registry.go
pkg/lib/: cache.go  formats.go  http.go  math.go  math_test.go  openai_limiter.go  openai_limiter_test.go  openai_usage_tracker.go  openai_usage_tracker_test.go  opml.go  strings.go  ticker.go  typed_uid.go  uid.go  validation.go  web.go  web_test.go
pkg/llms/: cache.go  completion.go  config.go  embedding.go  ollama.go
pkg/server/: handlers.go
pkg/sources/: cached_registry.go  config.go  executor.go  llm.go  registry.go  scheduler.go  source.go
pkg/utils/: http.go  strings.go  validation.go
pkg/widgets/: color.go  page.go  theme.go  widget-base.go  widget-container.go  widget-group.go  widget-split-column.go  widget.go
scripts/: migrate-embedding-dimensions.sql  migrate-source-uid-to-array.sql  migrate-summary-to-summaries.sql
web/: templates.go
web/templates/: document.html  footer.html  (+6 more)
(+124 files in other folders)
